# Realtime-chat

./: .env-template  Dockerfile  README.MD  docker-compose.yml  ensure_db.py  manage.py  pyproject.toml
.github/workflows/: ci-cd.yml
chat_app/: admin.py  config.py  consumers.py  middleware.py  models.py  redis_client.py
chat_app/api/v1/chat/: room.py  urls.py
chat_app/api/v1/chat/serializers/: __init__.py  room.py
chat_app/api/v1/tokens/: __init__.py  serializers.py  urls.py  views.py
chat_app/api/v1/users/: serializers.py  urls.py  views.py
chat_app/migrations/: 0001_initial.py  0002_user_refresh_token.py
chat_project/: asgi.py  settings.py  urls.py  wsgi.py
