[project]
name = "realtimechat"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.MD"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "drf-spectacular-sidecar (>=2025.10.1,<2026.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
